[project]
name = "langgraph-self-correction-app"
version = "0.1.0"
description = "A Flask web application demonstrating LangGraph Self-Correction and Reflexion loops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "langgraph>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.1.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
